[project]
name = "qwen-image-edit-demo"
version = "0.1.0"
description = "Gradio demo for Qwen Image Edit with local GPU inference"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.0.0",
    "torch==2.7.0",
    "torchvision",
    "diffusers",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "pillow>=10.0.0",
    "dfloat11[cuda12]>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "ipython",
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
# Install PyTorch from CUDA 12.8 index for RTX 5090 support
torch = { index = "pytorch-cuda" }
torchvision = { index = "pytorch-cuda" }
# Install diffusers from GitHub (required for Qwen-Image-Edit)
diffusers = { git = "https://github.com/huggingface/diffusers.git" }
